# drogue-cloud

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.adoc  HACKING.md  Makefile  README.md  RELEASE.md  TODO.md  credentials-migrate.sh  rust-toolchain.toml
access-token-service/: Cargo.toml
access-token-service/src/: authz.rs  endpoints.rs  lib.rs  mock.rs  rng.rs  service.rs
admin-service/: Cargo.toml
admin-service/src/: service.rs
admin-service/src/apps/: data.rs  endpoints.rs  mod.rs  service.rs
api-key-service/: Cargo.toml
api-key-service/src/: data.rs  endpoints.rs  error.rs  lib.rs  mock.rs  rng.rs  service.rs
api-key-service/tests/: rustls.rs
authentication-service/: .env  Cargo.toml  Dockerfile
authentication-service/migrations/2020-10-19-133358_create_devices/: up.sql
authentication-service/sql/: 00-create.sql  10-populate.sql
authentication-service/src/: auth.rs  database.rs  endpoints.rs  lib.rs  main.rs  models.rs  schema.rs  service.rs
authentication-service/src/db/: device.rs  mod.rs  tenant.rs
authentication-service/tests/: basic.rs  common.rs  hashed.rs  health.rs  x509.rs
coap-endpoint/: .env  Cargo.toml  Dockerfile  Makefile
coap-endpoint/src/: command.rs  downstream.rs  error.rs  lib.rs  main.rs  response.rs  session.rs  telemetry.rs  udp.rs
command-endpoint/: Cargo.toml  Dockerfile
command-endpoint/src/: lib.rs  main.rs
command-endpoint/src/sender/: default.rs  mod.rs  ttnv3.rs
command-endpoint/src/v1alpha1/: mod.rs
common/: Cargo.toml
common/src/: downstream.rs  lib.rs
console-backend/: Cargo.toml  Dockerfile
console-backend/api/: README.md  index.yaml
console-backend/src/: admin.rs  api.rs  auth.rs  cli.rs  demos.rs  endpoints.rs  error.rs  forward.rs  info.rs  kube.rs  lib.rs  main.rs  spy.rs
console-frontend/: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  api.js  index.html  main.js  nginx.conf  nginx.sh  package-lock.json  package.json  webpack.config.js
console-frontend/assets/: style.scss
console-frontend/dev/endpoints/: .gitignore  backend.json  ui-config.json
console-frontend/experiments/: spy.html
console-frontend/src/: app.rs  console.rs  data.rs  error.rs  examples.rs  index.rs  lib.rs  main.rs  page.rs  placeholder.rs  preferences.rs  spy.rs  utils.rs
console-frontend/src/backend/: mod.rs
console-frontend/src/components/: about.rs  mod.rs  placeholder.rs  spy.rs
console-frontend/src/examples/: commands.rs  consume.rs  data.rs  mod.rs  publish.rs  register.rs
console-frontend/src/pages/: access_tokens.rs  api_keys.rs  mod.rs  overview.rs  spy.rs  token.rs
console-frontend/src/utils/: context.rs  json.rs  mod.rs  paging.rs  shell.rs  toast.rs  validators.rs  yaml.rs
console-frontend/static/: index.html  style.scss
console-frontend/static/api/: index.html
console-frontend/static/images/: NOTICE.md
console-frontend/trunk.d/: build.sh
database-common/: Cargo.toml
database-common/benches/: diff.rs
database-common/migrations/00000000000000_init/: down.sql  up.sql
database-common/migrations/2020-10-19-133358_create_devices/: down.sql  up.sql
database-common/migrations/2020-11-24-142759_add_devices_props/: down.sql  up.sql
database-common/migrations/20210219000000_add_metadata/: down.sql  up.sql
database-common/migrations/20210223000000_add_indices/: down.sql  up.sql
database-common/migrations/20210301000000_add_event_outbox/: down.sql  up.sql
database-common/migrations/20210303000000_add_uid/: down.sql  up.sql
database-common/migrations/20210317000000_add_owner/: down.sql  up.sql
database-common/src/: auth.rs  database.rs  error.rs  lib.rs  models.rs  postgres.rs  schema.rs  utils.rs
database-common/tests/: auth.rs  outbox.rs
database-common/tools/: test.sql
device-management-controller/: Cargo.toml  Dockerfile
device-management-controller/src/: lib.rs  main.rs
device-management-endpoint/: .env  Cargo.toml  Dockerfile
device-management-endpoint/src/: main.rs
device-management-service/: Cargo.toml  Dockerfile  Makefile
device-management-service/src/: lib.rs  main.rs  service.rs  utils.rs
device-management-service/tests/: apps.rs  common.rs  devices.rs  health.rs  tenants.rs  transfer.rs
device-state-service/: Cargo.toml  Dockerfile
device-state-service/src/: lib.rs  main.rs
device-state-service/tests/: basic.rs  common.rs
ditto-pusher/: Cargo.toml  Dockerfile
ditto-pusher/src/: error.rs  main.rs
ditto-registry-operator/: Cargo.toml  Dockerfile
ditto-registry-operator/src/: lib.rs  main.rs
endpoint-common/: Cargo.toml
endpoint-common/src/: auth.rs  command_endpoint.rs  command_router.rs  commands.rs  downstream.rs  error.rs  id.rs  kafka.rs  lib.rs  psk.rs  x509.rs
event-common/: Cargo.toml
event-common/src/: config.rs
http-endpoint/: .env  Cargo.toml  Dockerfile  Staged-Dockerfile
http-endpoint/src/: auth.rs  basic_auth.rs  command.rs  downstream.rs  error.rs  http.rs  jwt_auth.rs  lib.rs  main.rs  telemetry.rs  ttn.rs  x509.rs
influxdb-pusher/: Cargo.toml  Dockerfile
influxdb-pusher/src/: error.rs  main.rs
integration-common/: Cargo.toml
integration-common/src/: lib.rs
knative-operator/: Cargo.toml  Dockerfile
knative-operator/src/: lib.rs  main.rs
mqtt-common/: Cargo.toml
mqtt-common/src/: error.rs  lib.rs  mqtt.rs  server.rs  tls.rs
mqtt-endpoint/: .env  Cargo.toml  Dockerfile  README.md
mqtt-endpoint/src/: auth.rs  cloudevents.rs  cloudevents_sdk_ntex.rs  command.rs  config.rs  error.rs  lib.rs  main.rs  mqtt.rs  server.rs  service.rs  x509.rs
mqtt-integration/: Cargo.toml  Dockerfile
mqtt-integration/src/: lib.rs  main.rs  mqtt.rs  server.rs  service.rs
operator-common/: Cargo.toml
operator-common/src/: lib.rs  watcher.rs
operator-common/tests/: basic.rs  common.rs
outbox-controller/: Cargo.toml  Dockerfile
outbox-controller/src/: lib.rs  main.rs  resend.rs  service.rs
registry-events/: Cargo.toml
registry-events/src/: db.rs  kafka.rs  lib.rs  mock.rs  reqwest.rs
rhoas-operator/: Cargo.toml
rhoas-operator/src/: lib.rs  main.rs
(+935 files in other folders)
