[workspace]

members = [
    "access-token-service",
    "admin-service",
    "authentication-service",
    "coap-endpoint",
    "command-endpoint",
    "console-backend",
    "console-common",
    "database-common",
    "device-management-controller",
    "device-management-service",
    "device-state-service",
    "ditto-registry-operator",
    "endpoint-common",
    "event-common",
    "http-endpoint",
    "integration-common",
    "knative-operator",
    "macros",
    "mqtt-common",
    "mqtt-endpoint",
    "mqtt-integration",
    "operator-common",
    "outbox-controller",
    "registry-events",
    "server",
    "service-api",
    "service-common",
    "test-common",
    "topic-admin-operator",
    "topic-strimzi-operator",
    "ttn-operator",
    "user-auth-service",
    "websocket-integration",
]
exclude = [
    "console-frontend"
]

[patch.crates-io]
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs", rev = "fe51e06fb2c44b1d3e3fd627cedea3fd582487ef" } # FIXME: awaiting release 0.13

#reqwest = { git = "https://github.com/ctron/reqwest", branch = "feature/basic_auth_wasm_1" }
#drogue-ttn = { git = "https://github.com/drogue-iot/drogue-ttn", rev = "cf0338a344309815f0f05e0d7d76acb712445175" } # FIXME: awaiting release

drogue-bazaar = { git = "https://github.com/drogue-iot/drogue-bazaar", rev = "a5204b3c9de03416747a375e9be41917d7d9088f" } # FIXME: awaiting release 0.2.0
#drogue-bazaar = { path = "../drogue-bazaar" }

drogue-client = { git = "https://github.com/drogue-iot/drogue-client", rev = "55135e532e4ddfdf88dfa50df73b751063740c71" } # FIXME: awaiting release 0.11.0
#drogue-client = { path = "../drogue-client" }

#operator-framework = { git = "https://github.com/ctron/operator-framework", rev = "d4415ccbc03417942f38573a0e164143bae9a25e" } # FIXME: awaiting release

#pq-sys = { git = "https://github.com/sgrif/pq-sys", rev = "3e367d53019a2740054d5dc6946e07931f1fb70b" } # needed for windows only

actix-web = { git = "https://github.com/ctron/actix-web", rev = "f3f41a0cc70e43564f8243b3ff425195566b5f16"} # FIXME: awaiting release 4.2.0
actix-http = { git = "https://github.com/ctron/actix-web", rev = "f3f41a0cc70e43564f8243b3ff425195566b5f16"} # FIXME: awaiting release 4.2.0
