[package]
name = "drogue-cloud-access-token-service"
version = "0.11.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]

[dependencies]
anyhow = "1"
async-trait = "0.1"
base62 = "2"
chrono = "0.4"
config = "0.13"
crc = "1"
drogue-client = "0.12"
env_logger = "0.9"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
indexmap = { version = "1", features = ["serde"] }
log = "0.4"
native-tls = "0.2"
rand = "0.8"
reqwest = "0.11"
rustls = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
url = "2"

drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common", features = ["rustls"] }

[dev-dependencies]
actix-rt = "2"
actix-service = "2"
serial_test = "0.9"
testcontainers = "0.12"

drogue-cloud-test-common = { path = "../test-common" }