[package]
name = "drogue-cloud-admin-service"
version = "0.11.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
indexmap = { version = "1.6", features = ["serde-1"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

drogue-cloud-service-api = { path = "../service-api" }
