[package]
name = "drogue-cloud-api-key-service"
version = "0.6.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"

[lib]

[dependencies]

anyhow = "1"

actix-http = "=3.0.0-beta.8" # FIXME: temporary intermediate
actix-web = "=4.0.0-beta.8" # we need v4 as we need tokio 1

tokio = { version = "1", features = ["full"] }

async-trait = "0.1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"

chrono = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

env_logger = "0.7"
log = "0.4"

native-tls = "0.2"
sha2 = "0.9"
sha3 = "0.9"
rustls = "0.19"
url = "2"
reqwest = "0.11"
keycloak = "12"
rand = "0.8"
crc = "1"
base62 = "1"

dotenv = "0.15"
config = "0.11"

thiserror = "1"

drogue-cloud-database-common = { path = "../database-common" }
drogue-cloud-endpoint-common = { path = "../endpoint-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common", features = ["rustls"] }
drogue-cloud-registry-events = { path = "../registry-events" }

[dev-dependencies]
actix-rt = "2.0.0-beta.2"
actix-service = "2.0.0-beta.4"
testcontainers = "0.12"
serial_test = "0.5"
drogue-cloud-test-common = { path = "../test-common" }
