[package]
name = "authentication-service"
version = "0.2.0"
authors = ["Jean-Baptiste Trystram <jbtrystram@redhat.com>"]
edition = "2018"

[dependencies]

anyhow = "1"

actix-rt = "1.1"
actix-service = "1"
actix-web = "3.0.0-beta.4"

futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"

chrono = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

env_logger = "0.7"
log = "0.4"

rust-crypto = "0.2.36"
jsonwebtokens = "1.0.0-alpha.13"

diesel = { version = "2.0.0", features = ["postgres", "r2d2", "serde_json"] }
dotenv = "0.15.0"
actix-web-httpauth = "0.5.0"
envconfig = "0.9.1"