[package]
name = "drogue-cloud-authentication-service"
description = "Authentication service"
version = "0.10.0"
authors = ["Jean-Baptiste Trystram <jbtrystram@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]

[dependencies]
anyhow = "1"
async-trait = "0.1"
bcrypt = "0.9"
chrono = "0.4"
config = "0.13"
deadpool-postgres = { version = "0.10", features = ["serde", "rt_tokio_1"] }
dotenv = "0.15.0"
drogue-client = "0.10"
env_logger = "0.9"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4"
native-tls = "0.2"
prometheus = { version = "^0.13", default-features = false }
rustls = { version = "0.20" }
rustls-pemfile = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha-crypt = "0.4"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1"] }
tracing = "0.1"

drogue-cloud-database-common = { path = "../database-common" }
drogue-cloud-endpoint-common = { path = "../endpoint-common" }
drogue-cloud-registry-events = { path = "../registry-events" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }

[dev-dependencies]
actix-rt = "2"
actix-service = "2"
drogue-cloud-test-common = { path = "../test-common" }
pem = "1"
rstest = "0.13"
serial_test = "0.6"
testcontainers = "0.12"

[features]
default = ["jaeger"]
jaeger = ["drogue-cloud-service-common/jaeger"]