[package]
name = "drogue-cloud-coap-endpoint"
version = "0.1.0"
authors = ["Pranav <adpranavb2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
bytestring = "1"
coap = "0.10"
coap-lite = "0.4"
cloudevents-sdk = "^0.4"
chrono = "0.4"
dotenv = "0.15"
drogue-cloud-endpoint-common = { path = "../endpoint-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }
drogue-client = "0.5.0"
env_logger = "0.7"
futures = "0.3"
http = "0.2"
log = "^0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded= "^0.7"
tokio = "1.7"