[package]
name = "drogue-cloud-coap-endpoint"
description = "CoAP endpoint"
version = "0.11.0"
authors = ["Pranav <adpranavb2000@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
actix-rt = "2"
anyhow = "1"
async-trait = "0.1"
bytes = "1"
bytestring = "1"
chrono = "0.4"
cloudevents-sdk = "0.6"
coap-lite = "0.11"
drogue-client = "0.11.0-alpha.1"
openssl = { version = "0.10", features = ["v111"] }
lazy_static = "1.4"
futures = "0.3"
http = "0.2"
log = "0.4"
prometheus = { version = "^0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded= "^0.7"
tokio = "1.21"
tokio-openssl = "0.6"
tokio-util = "0.7"
tokio-dtls-stream-sink = "0.5"
humantime-serde = "1"

drogue-cloud-endpoint-common = { path = "../endpoint-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }

[dev-dependencies]
regex = "1.5"
url = "2.2"
