[package]
name = "drogue-cloud-command-endpoint"
version = "0.9.0"
authors = ["Dejan Bosanac <dbosanac@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]

anyhow = "1"
thiserror = "1"

actix-cors = "=0.6.0-beta.8"

prometheus = { version = "^0.13", default-features = false }

async-trait = "0.1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"

dotenv = "0.15.0"
config = "0.11"

reqwest = "0.11"
url = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "0.8", features = ["v4"] }

env_logger = "0.7"
log = "0.4"

cloudevents-sdk = { version = "0.4", features = ["actix", "reqwest"] }

drogue-cloud-endpoint-common = { path = "../endpoint-common" }
drogue-cloud-integration-common = { path = "../integration-common" }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-service-api = { path = "../service-api" }

drogue-client = "0.9.0-alpha.1"

jsonwebtokens = "1.0.0-alpha.13"
base64 = "0.13"