[package]
name = "drogue-cloud-command-endpoint"
version = "0.11.0"
authors = ["Dejan Bosanac <dbosanac@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
actix-cors = "0.6"
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
cloudevents-sdk = { version = "0.6", features = ["actix", "reqwest"] }
drogue-client = "0.12"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4"
prometheus = { version = "^0.13", default-features = false }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }

drogue-cloud-endpoint-common = { path = "../endpoint-common" }
drogue-cloud-integration-common = { path = "../integration-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }
