[package]
name = "drogue-cloud-common"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]

anyhow = "1"

futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"

reqwest = "0.10"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "0.8", features = ["v4"] }

env_logger = "0.7"
log = "0.4"

cloudevents-sdk = "0.2"
cloudevents-sdk-actix-web = "0.2"
cloudevents-sdk-reqwest = "0.2"
