[package]
name = "drogue-cloud-console-backend"
version = "0.7.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"

[dependencies]

actix = "0.12.0"
actix-web = "=4.0.0-beta.8" # we need v4 as we need tokio 1
actix-cors = "=0.6.0-beta.2"
actix-web-httpauth = "=0.6.0-beta.2"
tokio-stream = { version = "0.1", features = ["time"] }

openid = "0.9"
biscuit = "0.5"
url = "2"
reqwest = "0.11"
ring = "0.16.18" # required due to an issue in the public API
cached = "0.25"
pem = "0.8"
mime = "0.3"
kube = "0.58"
k8s-openapi = { version = "0.12.0", features = ["v1_19"] }

log = "0.4"
env_logger = "0.7"

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"

anyhow = "1"
thiserror = "1"
failure = "0.1" # required for converting error away from failure

serde = "1"
serde_json = "1"
serde_yaml = "0.8"

futures = "0.3"

async-trait = "0.1"

cloudevents-sdk = { version = "0.4", features = ["rdkafka"] }

uuid = { version = "0.8", features = ["v4"] }

drogue-cloud-console-common = { path = "../console-common" }
drogue-cloud-service-api = { path = "../service-api", features = ["with_actix"] }
drogue-cloud-event-common = { path = "../event-common" }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-integration-common = { path = "../integration-common", features = ["with_actix"] }
drogue-cloud-api-key-service = { path = "../api-key-service" }

drogue-client = "0.7.1"

awc = { version = "=3.0.0-beta.7", optional = true, features = ["rustls"] }

[features]
forward = ["awc"]
