[package]
name = "drogue-cloud-console-backend"
description = "Console backend"
version = "0.9.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]

actix-web = "4"
actix-cors = "0.6"
tokio-stream = { version = "0.1", features = ["time"] }
prometheus = { version = "^0.13", default-features = false }

openid = "0.9"
biscuit = "0.5"
url = "2"
reqwest = "0.11"
ring = "0.16.18" # required due to an issue in the public API
cached = "0.25"
mime = "0.3"
kube = "0.68"
k8s-openapi = { version = "0.14.0", features = ["v1_19"] }

log = "0.4"
env_logger = "0.9"
dotenv = "0.15"

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"

anyhow = "1"
thiserror = "1"
failure = "0.1" # required for converting error away from failure

serde = "1"
serde_json = "1"
serde_yaml = "0.8"

futures = "0.3"

async-trait = "0.1"

cloudevents-sdk = { version = "0.5", features = ["rdkafka"] }

uuid = { version = "0.8", features = ["v4"] }

drogue-cloud-console-common = { path = "../console-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-event-common = { path = "../event-common" }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-integration-common = { path = "../integration-common" }
drogue-cloud-access-token-service = { path = "../access-token-service" }

drogue-client = "0.10"

awc = { version = "=3.0.0-beta.21", optional = true, features = ["rustls"] }

[features]
default = ["jaeger"]
forward = ["awc"]
jaeger = ["drogue-cloud-service-common/jaeger"]