[package]
name = "drogue-cloud-console-backend"
description = "Console backend"
version = "0.11.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
actix-cors = "0.6"
actix-web = "4"
anyhow = "1"
async-trait = "0.1"
biscuit = "0.5"
cached = "0.40"
chrono = { version = "0.4", features = ["serde"] }
cloudevents-sdk = { version = "0.5", features = ["rdkafka"] }
drogue-client = "0.11.0-alpha.1"
futures = "0.3"
k8s-openapi = { version = "0.16", features = ["v1_19"] }
kube = "0.75"
log = "0.4"
mime = "0.3"
openid = "0.10"
prometheus = { version = "^0.13", default-features = false }
reqwest = "0.11"
ring = "0.16.18" # required due to an issue in the public API
serde = "1"
serde_json = "1"
serde_yaml = "0.8" # remains at 0.8 because of the new serialization format
thiserror = "1"
tokio = "1"
tokio-stream = { version = "0.1", features = ["time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

drogue-cloud-access-token-service = { path = "../access-token-service" }
drogue-cloud-console-common = { path = "../console-common" }
drogue-cloud-event-common = { path = "../event-common" }
drogue-cloud-integration-common = { path = "../integration-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }
