[package]
name = "drogue-cloud-console-frontend"
version = "0.9.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
description = "Console Frontend"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
bstr = "0.2"
chrono = { version = "0.4", features = ["wasmbind"] }
chrono-tz = "0.5"
cloudevents-sdk = "0.4"
futures-util = "0.3"
gloo-storage = "0.2"
gloo-timers = "0.2"
gloo-utils = "0.1"
headers = "0.3"
hostname-validator = "1.1.0"
http = "0.2"
indexmap = "1.7.0"
itertools = "0.9"
java-properties = "1"
js-sys = "0.3.50"
log = "0.4"
md5 = "0.7"
monaco = { version = "0.3", features = ["yew-components"] }
once_cell = "1"
patternfly-yew = "0.2.0"
percent-encoding = "2.1"
pretty-hex = "0.2"
reqwest = "0.11"
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
thiserror = "1"
unicode-segmentation = "1"
url = "2"
uuid = { version = "0.8", features = ["wasm-bindgen", "v4"] }
wasm-logger = "0.2"
yew = "0.19"
yew-agent = "0.1"
yew-oauth2 = { version = "0.2.0", features = ["openid"] }
yew-router = { version = "0.16.1", package = "yew-router-nested" }

# For wasm-bindgen we need the exact version, as it will be required by the wasm-pack tool.
# Updating this dependency requires:
#  * Update the dependency version here
#  * Create a new builder image, with the same version of wasm-bindgen pre-installed
wasm-bindgen = "=0.2.80"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3", features = [
    "AbortController",
    "AbortSignal",
    "Headers",
    "Location",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "MessageEvent",
    "WebSocket",
    "Window",
] }

drogue-cloud-service-api = { path = "../service-api", default-features = false }
drogue-cloud-console-common = { path = "../console-common" }
drogue-client = { version = "0.10.0", default-features = false, features = ["wasm"] }

# we need to override the feature flags of the defaults
openidconnect = { version = "2.2", default-features = false, features = ["reqwest", "rustls-tls", "rustcrypto"] }

[dev-dependencies]
env_logger = "0.9"

[features]
default = []
debug = []

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true

[patch.crates-io]
patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "57829945179d823f754314d870290edc3de9701d" } # FIXME: awaiting release
#patternfly-yew = { path = "../../patternfly-yew" }

drogue-client = { git = "https://github.com/drogue-iot/drogue-client", rev = "f235c8519d529bb5b8ce59b57bc16b4c659c90a7" } # FIXME: awaiting release
#drogue-client = { path = "../../drogue-client" }

#monaco = { git = "https://github.com/siku2/rust-monaco", rev = "cb20108c317976ba8c3d05b581a84efd394c3dbe" } # FIXME: awaiting release
#monaco = { path = "../../rust-monaco" }
#yew-router = { git = "https://github.com/ctron/yew-router", rev="e1012d1bb48dfb1e8e78d84eefddd2b96cd13219" }

#yew-oauth2 = { path = "../../yew-oauth2" }
yew-oauth2 = { git = "https://github.com/ctron/yew-oauth2", rev = "d88ef4d8ae57a816305718958c039f295f406908" } # FIXME: awaiting release

openidconnect = { git = "https://github.com/ctron/openidconnect-rs", rev = "6ca4a9ab9de35600c44a8b830693137d4769edf4" } # FIXME: https://github.com/ramosbugs/openidconnect-rs/pull/58
