[package]
name = "drogue-cloud-console-frontend"
version = "0.11.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
description = "Console Frontend"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
bstr = "1"
chrono = { version = "0.4", features = ["wasmbind"] }
chrono-tz = "0.8"
cloudevents-sdk = "0.6"
futures-util = "0.3"
gloo-storage = "0.2"
gloo-timers = "0.2"
gloo-utils = "0.1"
headers = "0.3"
hostname-validator = "1.1.0"
http = "0.2"
indexmap = "1.9"
itertools = "0.10"
java-properties = "1"
js-sys = "0.3.50"
log = "0.4"
md5 = "0.7"
monaco = { version = "0.3", features = ["yew-components"] }
once_cell = "1"
patternfly-yew = "0.2.3"
percent-encoding = "2.1"
pretty-hex = "0.3"
reqwest = "0.11"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
unicode-segmentation = "1"
url = "2"
uuid = { version = "1", features = ["v4", "js"] }
wasm-logger = "0.2"
yew = "0.19"
yew-agent = "0.1"
yew-oauth2 = { version = "0.4", features = ["openid", "router"] }
yew-router = { version = "0.16.1", package = "yew-router-nested" }

# For wasm-bindgen we need the exact version, as it will be required by the wasm-pack tool.
# Updating this dependency requires:
#  * Update the dependency version here
#  * Create a new builder image, with the same version of wasm-bindgen pre-installed
wasm-bindgen = "=0.2.82"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3", features = [
    "AbortController",
    "AbortSignal",
    "CloseEvent",
    "Headers",
    "Location",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "MessageEvent",
    "WebSocket",
    "Window",
] }

drogue-cloud-service-api = { path = "../service-api", default-features = false }
drogue-cloud-console-common = { path = "../console-common" }
drogue-client = { version = "0.12", default-features = false, features = ["wasm"] }

# we need to override the feature flags of the defaults
openidconnect = { version = "=2.2.0", default-features = false, features = ["reqwest", "rustls-tls", "rustcrypto"] }

[dev-dependencies]
env_logger = "0.9"

[features]
default = []
debug = []

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true

[patch.crates-io]
#patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "331782836f0ed67bc6ab41ef71497c970176e9d4" } # FIXME: awaiting release
patternfly-yew = { path = "../../../patternfly-yew" }

drogue-client = { git = "https://github.com/drogue-iot/drogue-client", rev = "fdebb42a6cbaa872a779e892fefe0f687b34fa4b" } # FIXME: awaiting release 0.12.0
#drogue-client = { path = "../../drogue-client" }

drogue-bazaar = { git = "https://github.com/drogue-iot/drogue-bazaar", rev = "8c6f6f6456a18fd8ab41ca2a64b45b154a94f4aa" } # FIXME: awaiting release 0.4.0
#drogue-bazaar = { path = "../../drogue-bazaar" }

#monaco = { git = "https://github.com/siku2/rust-monaco", rev = "cb20108c317976ba8c3d05b581a84efd394c3dbe" } # FIXME: awaiting release
#monaco = { path = "../../rust-monaco" }
#yew-router = { git = "https://github.com/ctron/yew-router", rev="e1012d1bb48dfb1e8e78d84eefddd2b96cd13219" }

#yew-oauth2 = { path = "../../yew-oauth2" }
#yew-oauth2 = { git = "https://github.com/ctron/yew-oauth2", rev = "33984827e2ae790202f38edfcdb1dfac10bc7a90" } # FIXME: awaiting release

openidconnect = { git = "https://github.com/ctron/openidconnect-rs", rev = "6ca4a9ab9de35600c44a8b830693137d4769edf4" } # FIXME: https://github.com/ramosbugs/openidconnect-rs/pull/58
