[package]
name = "drogue-cloud-console-frontend"
version = "0.11.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
description = "Console Frontend"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
bstr = "1"
chrono = { version = "0.4", features = ["wasmbind"] }
chrono-tz = "0.8"
cloudevents-sdk = "0.6"
futures-util = "0.3"
gloo-storage = "0.2"
gloo-timers = "0.2"
gloo-utils = "0.1"
headers = "0.3"
hostname-validator = "1.1.0"
http = "0.2"
indexmap = "1.9"
itertools = "0.10"
java-properties = "1"
js-sys = "0.3.50"
log = "0.4"
md5 = "0.7"
monaco = { version = "0.3", features = ["yew-components"] }
once_cell = "1"
patternfly-yew = "0.3.0"
percent-encoding = "2.1"
pretty-hex = "0.3"
reqwest = "0.11"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
unicode-segmentation = "1"
url = "2"
uuid = { version = "1", features = ["v4", "js"] }
wasm-logger = "0.2"
yew = "0.20"
yew-oauth2 = { version = "0.5", features = ["openid", "router"] }
yew-nested-router = "0.0.3"

# For wasm-bindgen we need the exact version, as it will be required by the wasm-pack tool.
# Updating this dependency requires:
#  * Update the dependency version here
#  * Create a new builder image, with the same version of wasm-bindgen pre-installed
wasm-bindgen = "=0.2.82"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3", features = [
    "AbortController",
    "AbortSignal",
    "CloseEvent",
    "Headers",
    "Location",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "MessageEvent",
    "WebSocket",
    "Window",
] }

drogue-cloud-service-api = { path = "../service-api", default-features = false }
drogue-cloud-console-common = { path = "../console-common" }
drogue-client = { version = "0.12", default-features = false, features = ["wasm"] }

# we need to override the feature flags of the defaults
openidconnect = { version = "=2.2.0", default-features = false, features = ["reqwest", "rustls-tls", "rustcrypto"] }

[dev-dependencies]
env_logger = "0.10"

[features]
default = []
debug = []

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true

[patch.crates-io]
#patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "3bafdf75226fa9a42383eaa1b5235f8fffa932f2" } # FIXME: awaiting release
patternfly-yew = { path = "../../patternfly-yew" }

drogue-client = { git = "https://github.com/drogue-iot/drogue-client", rev = "798c968f0a63a0debcff9965c66b361e85946458" } # FIXME: awaiting release 0.12.0
#drogue-client = { path = "../../drogue-client" }

drogue-bazaar = { git = "https://github.com/drogue-iot/drogue-bazaar", rev = "d19ad32f200938aeb5d7081ee3385ee40c5ae0ff" } # FIXME: awaiting release 0.4.0
#drogue-bazaar = { path = "../../drogue-bazaar" }

monaco = { git = "https://github.com/siku2/rust-monaco", rev = "7a4b358196922a67a4950a4f372a9962d0366736" } # FIXME: awaiting release 0.4.0
#monaco = { path = "../../rust-monaco" }
#yew-nested-router = { path = "../../yew-nested-router" }
yew-nested-router = { git = "https://github.com/ctron/yew-nested-router", rev = "006bcbea181e0e958d4336e9060e184234b9e7ed" } # FIXME: awaiting release 0.0.4

#yew-oauth2 = { path = "../../yew-oauth2" }
yew-oauth2 = { git = "https://github.com/ctron/yew-oauth2", rev = "91e2293db66d4aa1763cd4f7277b7e10046435d1" } # FIXME: awaiting release

openidconnect = { git = "https://github.com/ctron/openidconnect-rs", rev = "6ca4a9ab9de35600c44a8b830693137d4769edf4" } # FIXME: https://github.com/ramosbugs/openidconnect-rs/pull/58
