[package]
name = "drogue-cloud-database-common"
version = "0.4.0"
authors = ["Jean-Baptiste Trystram <jbtrystram@redhat.com>"]
edition = "2018"

[dependencies]

async-trait = "0.1"
futures = "0.3"
log = "0.4"
thiserror = "1"

actix-web = "4.0.0-beta.1" # we need v4 as we need tokio 1

serde_json = "1"
serde = "1"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }

deadpool = "0.7"
deadpool-postgres = { version = "0.7", features = ["config"] }
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1", "with-uuid-0_8", "with-chrono-0_4"] }

drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }

[dev-dependencies]
anyhow = "1"

criterion = { version = "0.3" } # , features = ["real_blackbox"]
tokio = { version = "1", features = ["full"] }
serial_test = "0.5"

drogue-cloud-test-common = { path = "../test-common" }
log = "0.4"
env_logger = "0.8"

[[bench]]
name = "diff"
harness = false
