[package]
name = "drogue-cloud-database-common"
version = "0.11.0"
authors = ["Jean-Baptiste Trystram <jbtrystram@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
drogue-bazaar = "0.3"
deadpool-postgres = { version = "0.10", features = ["serde", "rt_tokio_1"] }
drogue-client = "0.11"
futures = "0.3"
indexmap = { version = "1.9", features = ["serde-1"] }
log = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }

[features]
default = ["native-tls"]
native-tls = ["drogue-bazaar/native-tls"]

[dev-dependencies]
criterion = { version = "0.4" } # , features = ["real_blackbox"]
env_logger = "0.9"
serial_test = "0.9"
tokio = { version = "1", features = ["full"] }

drogue-cloud-test-common = { path = "../test-common" }

[[bench]]
name = "diff"
harness = false
