[package]
name = "device-management-endpoint"
version = "0.1.0"
authors = ["Jean-Baptiste Trystram <jbtrystram@redhat.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
actix-web = "3"
dotenv = "0.15.0"
envconfig = "0.9.1"
env_logger = "0.7"
log = "0.4"
serde_json = "1"
futures = "0.3"

drogue-cloud-database-common = { path = "../database-common" }